D2: fix yamls and Dockerfile